# cii

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
src/cii/: common.py  config.py  main.py  playbook.py
tests/: conftest.py  test_playbook.py
